--- a/media/themes/easter.json
+++ b/media/themes/easter.json
@@ -1,6 +1,6 @@
 {
-    "title": "easter",
-    "description": "Happy easter!",
+    "title": "Easter",
+    "description": "Happy Easter!",
     "params": {
         "rounded": 0,
         "shadow": 0,
